--- a/Changes
+++ b/Changes
@@ -38,6 +38,7 @@
     
       -  void (*free_env_prepared)(SPVM_ENV* env);
       -  void (*free_env)(SPVM_ENV* env);
+      -  SPVM_ENV* (*new_env)(SPVM_ENV* env);
 
 0.989020 2023-07-07
   [Incompatibe Changes]
