--- a/Changes
+++ b/Changes
@@ -2,7 +2,7 @@
   [New Features]
     * The following method were added to the Env class.
     
-      native static method new : Env ();
+      static method new : Env ($runtime : Runtime = undef);
     
     * The following native runtime APIs were added.
 
