Natvie arg APIs were added.
+  void* (*get_basic_type)(void* runtime, void* arg);
+  int32_t (*get_type_dimension)(void* runtime, void* arg);
+  int32_t (*get_type_flag)(void* runtime, void* arg);

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 0.989021 2023-07-07
   [New Features]
+    * The native arg API was added.
+    
     * The following method were added to the Env class.
     
       static method new : Env ($runtime : Runtime = undef);
