--- a/Changes
+++ b/Changes
@@ -15,11 +15,13 @@
   [Document Changes]
     * SPVM::Document::NativeClass was renamed to SPVM::Document::NativeModule.
   [Incompatibe Changes]
-    * The following runtime native APIs were changed.
+    * The following runtime native APIs were renamed.
     
       -  void* (*get_field)(void* runtime, void* basic_type, int32_t field_index);
       +  void* (*get_field_by_index)(void* runtime, void* basic_type, int32_t field_index);
-
+      
+      -  void* (*get_class_var)(void* runtime, void* basic_type, int32_t class_var_index);
+      +  void* (*get_class_var_by_index)(void* runtime, void* basic_type, int32_t class_var_index);
     * The spvm_native.c was removed.
       
     * The methods in the Runtime class were removed.
