spvm_runtime_opcode.h was added.

--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 0.989021 2023-07-07
+  [Changes]
+    * Exception messages were improved.
+    
   [New Features]
     * The native arg API was added.
     * The native class variable API was added.
