--- a/Changes
+++ b/Changes
@@ -20,6 +20,21 @@
     * The following runtime native APIs were removed.
     
       - void* (*get_basic_type_anon_basic_type)(void* runtime, void* basic_type, int32_t anon_basic_type_index);
+      -  const char* (*get_basic_type_module_rel_file)(void* runtime, void* basic_type);
+      -  const char* (*get_basic_type_module_dir)(void* runtime, void* basic_type);
+      -  int32_t (*get_basic_type_is_anon)(void* runtime, void* basic_type);
+      -  int32_t (*get_basic_type_fields_length)(void* runtime, void* basic_type);
+      -  int32_t (*get_basic_type_methods_length)(void* runtime, void* basic_type);
+      -  int32_t (*get_basic_type_class_vars_length)(void* runtime, void* basic_type);
+      -  void* (*get_basic_type_parent)(void* runtime, void* basic_type);
+      -  const char* (*get_basic_type_version_string)(void* runtime, void* basic_type);
+      -  int32_t (*get_basic_type_class_vars_length)(void* runtime, void* basic_type);
+      -  void* (*get_basic_type_parent)(void* runtime, void* basic_type);
+      -  const char* (*get_basic_type_version_string)(void* runtime, void* basic_type);
+      -  int32_t (*get_basic_type_class_vars_length)(void* runtime, void* basic_type);
+      -  void* (*get_basic_type_parent)(void* runtime, void* basic_type);
+      -  const char* (*get_basic_type_version_string)(void* runtime, void* basic_type);
+      -  int32_t (*get_basic_type_id)(void* runtime, void* basic_type);
     
     * The following runtime native APIs were renamed.
     
