--- a/Changes
+++ b/Changes
@@ -18,7 +18,19 @@
     * SPVM::Document::NativeClass was renamed to SPVM::Document::NativeModule.
   [Incompatibe Changes]
     * The following runtime native APIs were removed.
-    
+
+      -  void* (*get_class_var_by_index)(void* runtime, void* basic_type, int32_t class_var_index);
+      -  const char* (*get_class_var_name)(void* runtime, void* class_var);
+      -  void* (*get_class_var_basic_type)(void* runtime, void* class_var);
+      -  int32_t (*get_class_var_type_dimension)(void* runtime, void* class_var);
+      -  int32_t (*get_class_var_type_flag)(void* runtime, void* class_var);
+      -  void* (*get_class_var_current_basic_type)(void* runtime, void* class_var);
+      -  void* (*get_class_var_by_name)(void* runtime, void* basic_type, const char* class_var_name);
+      -  int32_t (*get_class_var_index)(void* runtime, void* class_var);
+      -  void* (*get_class_var_current_basic_type)(void* runtime, void* class_var);
+      -  void* (*get_class_var_by_name)(void* runtime, void* basic_type, const char* class_var_name);
+      -  int32_t (*get_class_var_index)(void* runtime, void* class_var);
+          
       -  void* (*get_arg_basic_type)(void* runtime, void* arg);
       -  int32_t (*get_arg_type_dimension)(void* runtime, void* arg);
       -  int32_t (*get_arg_type_flag)(void* runtime, void* arg);
