--- a/Changes
+++ b/Changes
@@ -19,6 +19,16 @@
   [Incompatibe Changes]
     * The following runtime native APIs were removed.
 
+      -  const char* (*get_field_name)(void* runtime, void* field);
+      -  void* (*get_field_basic_type)(void* runtime, void* field);
+      -  int32_t (*get_field_type_dimension)(void* runtime, void* field);
+      -  int32_t (*get_field_type_flag)(void* runtime, void* field);
+      -  void* (*get_field_current_basic_type)(void* runtime, void* field);
+      -  void* (*get_field_by_index)(void* runtime, void* basic_type, int32_t field_index);
+      -  void* (*get_field_by_name)(void* runtime, void* basic_type, const char* field_name);
+      -  int32_t (*get_field_index)(void* runtime, void* field);
+      -  int32_t (*get_field_offset)(void* runtime, void* field);
+
       -  void* (*get_class_var_by_index)(void* runtime, void* basic_type, int32_t class_var_index);
       -  const char* (*get_class_var_name)(void* runtime, void* class_var);
       -  void* (*get_class_var_basic_type)(void* runtime, void* class_var);
