Native API IDs of the runtime native APIs were reordered.
  [Incompatibe Changes]
    * Native API IDs of the runtime native APIs were reordered.

      0 new_instance
      1 free_instance
      2 object_header_size
      3 object_ref_count_offset
      4 object_length_offset
      5 get_basic_type_by_id
      6 get_basic_type_by_name
      7 get_basic_types_length
      8 is_object_type
      9 can_assign
      10 build_precompile_module_source
      11 build_precompile_method_source

--- a/Changes
+++ b/Changes
@@ -17,6 +17,21 @@
   [Document Changes]
     * SPVM::Document::NativeClass was renamed to SPVM::Document::NativeModule.
   [Incompatibe Changes]
+    * Native API IDs of the runtime native APIs were reordered.
+
+      0 new_instance
+      1 free_instance
+      2 object_header_size
+      3 object_ref_count_offset
+      4 object_length_offset
+      5 get_basic_type_by_id
+      6 get_basic_type_by_name
+      7 get_basic_types_length
+      8 is_object_type
+      9 can_assign
+      10 build_precompile_module_source
+      11 build_precompile_method_source
+
     * The following runtime native APIs were removed.
 
       -  const char* (*get_method_name)(void* runtime, void* method);
