--- a/Changes
+++ b/Changes
@@ -8,7 +8,7 @@
       -  void* object_header_size;
       -  void* object_ref_count_offset;
       -  void* object_length_offset;
-      +  int32_t (*get_object_header_size)(void* runtime);
+      +  int32_t (*get_object_data_offset)(void* runtime);
       +  int32_t (*get_object_ref_count_offset)(void* runtime);
       +  int32_t (*get_object_length_offset)(void* runtime);  
     
