--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+0.989023 2023-07-12
+  [Incompatibe Changes]
+    * The following native APIs were removed.
+    
+      - int32_t (*has_interface)(SPVM_ENV* env, SPVM_VALUE* stack, void* object, void* interface_basic_type);
+      -  int32_t (*has_interface_by_name)(SPVM_ENV* env, SPVM_VALUE* stack, void* object, const char* basic_type_name);
+    
 0.989022 2023-07-11
   [Document Fix]
     * The doc of Native API IDs of the module file native APIs were fixed.
