The following native APIs were removed.
  [Incompatibe Changes]
    * The following native APIs were removed.

      - int32_t (*has_interface)(SPVM_ENV* env, SPVM_VALUE* stack, void* object, void* interface_basic_type);
      -  int32_t (*has_interface_by_name)(SPVM_ENV* env, SPVM_VALUE* stack, void* object, const char* basic_type_name);
      -  void* (*alloc_memory_block_zero)(SPVM_ENV* env, size_t size);
      -  void (*free_memory_block)(SPVM_ENV* env, void* block);
      -  int32_t (*get_memory_blocks_count)(SPVM_ENV* env);
      -  void* memory_blocks_count;

--- a/Changes
+++ b/Changes
@@ -7,6 +7,7 @@
       -  void* (*alloc_memory_block_zero)(SPVM_ENV* env, size_t size);
       -  void (*free_memory_block)(SPVM_ENV* env, void* block);
       -  int32_t (*get_memory_blocks_count)(SPVM_ENV* env);
+      -  void* memory_blocks_count;
     
     * The following methods in the Env class were renamed.
     
