--- a/Changes
+++ b/Changes
@@ -9,6 +9,11 @@
       -  int32_t (*get_memory_blocks_count)(SPVM_ENV* env);
       -  void* memory_blocks_count;
     
+    * The following native APIs were renamed.
+
+      -  int32_t (*call_init_blocks)(SPVM_ENV* env, SPVM_VALUE* stack);
+      +  int32_t (*init_env)(SPVM_ENV* env, SPVM_VALUE* stack);
+
     * The following methods in the Env class were renamed.
     
       -  method build_stack : Stack ();
