--- a/Changes
+++ b/Changes
@@ -8,11 +8,15 @@
       -  void (*free_memory_block)(SPVM_ENV* env, void* block);
       -  int32_t (*get_memory_blocks_count)(SPVM_ENV* env);
       -  void* memory_blocks_count;
+
     
     * The following native APIs were renamed.
 
       -  int32_t (*call_init_blocks)(SPVM_ENV* env, SPVM_VALUE* stack);
       +  int32_t (*init_env)(SPVM_ENV* env, SPVM_VALUE* stack);
+
+      -  void (*cleanup_global_vars)(SPVM_ENV* env, SPVM_VALUE* stack);
+      +  void (*cleanup_env)(SPVM_ENV* env, SPVM_VALUE* stack);
 
     * The following methods in the Env class were renamed.
     
