--- a/Changes
+++ b/Changes
@@ -61,6 +61,9 @@
       -  void* (*get_compile_type_name_raw)(SPVM_ENV* env, SPVM_VALUE* stack, const char* basic_type_name, int32_t dimension, int32_t flag);
       +  void* (*get_compile_type_name_no_mortal)(SPVM_ENV* env, SPVM_VALUE* stack, const char* basic_type_name, int32_t dimension, int32_t flag);
 
+      -  int32_t (*get_elem_size)(SPVM_ENV* env, SPVM_VALUE* stack, void* array);
+      +  int32_t (*get_elem_width)(SPVM_ENV* env, SPVM_VALUE* stack, void* array);
+
     * The following methods in the Env class were renamed.
     
       -  method build_stack : Stack ();
